# Glimpse

./: .gitignore  README.md  dependencies.txt  pyproject.toml
docs/: how-to-build.md  usage.md
glimpse/: ScreenRecorder.py  ScreenRecordingTree.py
glimpse/models/: FPS.py
src/: ScreenRecorderTwo.py
src/interfaces/: IScreenRecorder.py
src/models/: RecorderConfig.py
